# datafusion-distributed

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  build.sh  clean_and_build.sh  clippy.toml  explain_analyze.txt  explain_analyze_report.md  new.md  run_test_loop.sh
.github/workflows/: ci.yml  docs.yml
benchmarks/: Cargo.toml  README.md  build.rs  gen-clickbench.sh  gen-tpcds.sh  gen-tpch.sh  run.sh
benchmarks/benches/: broadcast_cache_scenarios.rs  latency_metric.rs  local_exchange_query_shapes.rs  local_exchange_split.rs  local_repartition.rs  shuffle.rs  transport.rs
benchmarks/cdk/: .gitignore  README.md  package-lock.json  package.json  requirements.txt
benchmarks/cdk/ballista/: Cargo.toml
benchmarks/cdk/ballista/src/: ballista_executor.rs  ballista_http.rs  ballista_scheduler.rs
benchmarks/cdk/lib/: ballista.ts  cdk-stack.ts  datafusion-distributed.ts  fastDeploy.ts  spark.ts  trino.ts
benchmarks/cdk/test/: cdk.test.ts
benchmarks/src/: compare.rs  convert.rs  generate_tpch.rs  lib.rs  main.rs  prepare_clickbench.rs  prepare_tpcds.rs  prepare_tpch.rs  results.rs  run.rs
benchmarks/src/datasets/: clickbench.rs  common.rs  tpcds.rs  tpch.rs
benchmarks/src/tpch/: convert.rs  mod.rs  run.rs
benchmarks/src/util/: memory.rs  mod.rs  options.rs  run.rs  static_channel_resolver.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
console/: Cargo.toml  LICENSE  README.md
console/examples/: README.md  cluster.md  cluster.rs  console.md  console_run.rs  console_worker.rs  tpcds_runner.md  tpcds_runner.rs
console/src/: app.rs  input.rs  main.rs  state.rs  ui.rs  worker.rs
console/src/ui/: cluster.rs  footer.rs  format.rs  header.rs  help.rs  mod.rs  worker.rs
datafusion_distributed_controller/: Cargo.toml
datafusion_distributed_controller/src/: channel_resolver.rs  lib.rs
docs/: .gitignore  Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: custom_distributed_partial_reduction_tree.md  custom_distributed_partial_reduction_tree.rs  custom_execution_plan.md  custom_execution_plan.rs  custom_worker_url_routing.md  custom_worker_url_routing.rs  in_memory.md  in_memory_cluster.rs  localhost.md  localhost_run.rs  localhost_versioned_run.rs  localhost_versioned_worker.rs  localhost_worker.rs  work_unit_feed.md  work_unit_feed.rs  worker_versioning.md
hook-scripts/: pre-commit
k8s/: cluster.yaml  dev_cluster.yaml
scripts/: build_and_push_docker.sh  launch_python_arrowflightsql_client.sh  launch_tpch_cluster.sh  python_tests.sh  validate_tpch_correctness.sh
src/: .physical_optimizer.rs.pending-snap  analyze.rs  channel_manager_ext.rs  channel_resolver_ext.rs  codec.rs  config_extension_ext.rs  ctx_customizer.rs  customizer.rs  distributed_ext.rs  distributed_physical_optimizer_rule.rs  distribution_strategy.rs  explain.rs  filter_expressions.rs  flight.rs  flight_handlers.rs  friendly.rs  isolator.rs  k8s.rs  lib.rs  logging.rs  main.rs  passthrough_headers.rs  physical.rs  physical_optimizer.rs  planning.rs  processor_service.rs  proxy_service.rs  query_planner.rs  record_batch_exec.rs  result.rs  stage.rs  stage_reader.rs  task.rs  test_utils.rs  test_worker.rs  tpch_tests.rs  tpch_validation_tests.rs  transport.rs  transport_traits.rs  user_codec_ext.rs  (+5 more)
src/common/: callback_stream.rs  children_helpers.rs  composed_extension_codec.rs  execution_plan_ops.rs  map_last_stream.rs  mod.rs  on_drop_stream.rs  once_lock.rs  partitioning.rs  recursion.rs  task_context_helpers.rs  time.rs  ttl_map.rs  util.rs  uuid.rs  visitor.rs
src/coordinator/: distributed.rs  latency_metric.rs  metrics_store.rs  mod.rs  prepare_dynamic_plan.rs  prepare_static_plan.rs  query_coordinator.rs  task_spawner.rs
src/distributed_planner/: batch_coalescing_below_network_boundaries.rs  children_isolator_union_split.rs  coalesce_partitions_below_network_coalesce.rs  distribute_plan.rs  distributed_config.rs  distributed_context.rs  distributed_physical_optimizer_rule.rs  distributed_plan_error.rs  distributed_planner_extension.rs  distributed_query_planner.rs  exchange_assignment.rs  inject_network_boundaries.rs  insert_broadcast.rs  insert_local_exchange_split.rs  mod.rs  network_boundary.rs  network_boundary_placeholder.rs  partial_reduce_below_network_shuffles.rs  plan_annotator.rs  prepare_network_boundaries.rs  push_fetch_into_network_coalesce.rs  session_state_builder_ext.rs  simplify_network_boundaries.rs  specialize_plan.rs  stage_partitioning.rs  task_estimator.rs  task_specialized_stage_plans.rs  test_utils.rs
src/errors/: arrow_error.rs  datafusion_error.rs  distributed_plan_error.rs  io_error.rs  mod.rs  objectstore_error.rs  parquet_error.rs  parser_error.rs  schema_error.rs
src/examples/: distributed_join.rs
src/exec/: isolator.rs  mod.rs
src/execution_plans/: arrow_flight_read.rs  broadcast.rs  children_isolator_union.rs  codec.rs  common.rs  distributed.rs  distributed_leaf.rs  local_exchange_split.rs  metrics.rs  metrics_collecting_stream.rs  mod.rs  network_boundary_builder.rs  network_broadcast.rs  network_coalesce.rs  sampler.rs  (+11 more)
tests/: .distributed_aggregation.rs.pending-snap  .join.rs.pending-snap  basic_tests.rs  broadcast_join_test.rs  clickbench_correctness_test.rs  clickbench_plans_test.rs  cluster_setup.rs  common.rs  compare_dynamic_filter.rs  custom_config_extension.rs  custom_extension_codec.rs  custom_network_boundary_placeholders.rs  distributed_aggregation.rs  distributed_unions.rs  empty_columns_between_workers.rs  error_propagation.rs  extension_points.rs  highly_distributed_query.rs  introspection.rs  join.rs  metrics_collection.rs  mock_data.rs  non_distributed_consistency_test.rs  opt_parallel_execution.rs  partition_feed.rs  round_trip_physical_plan.rs  sqllogictest.sh  stage_partitioning.rs  stage_planning.rs  stateful_data_cleanup.rs  stateful_execution_plan.rs  task_estimator_test.rs  task_planning.rs  tpc_ds_randomized.rs  tpcds_correctness_test.rs  tpcds_plans_test.rs  tpcds_test.rs  tpch_correctness_test.rs  tpch_explain_analyze.rs  tpch_plans_test.rs  (+9 more)
tpch/: tpch_client.py
(+248 files in other folders)
