[workspace]
members = ["benchmarks"]

[workspace.dependencies]
datafusion = { version = "51.0.0", default-features = false }
datafusion-proto = { version = "51.0.0" }

[package]
name = "datafusion-distributed"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42" }
datafusion = { workspace = true, features = [
    "parquet",
    "sql",
    "unicode_expressions",
    "datetime_expressions",
] }
datafusion-proto = { workspace = true }
arrow-flight = "57.0.0"
arrow-select = "57.0.0"
async-trait = "0.1.88"
tokio = { version = "1.46.1", features = ["full"] }
tonic = { version = "0.14.1", features = ["transport"] }
tower = "0.5.2"
http = "1.3.1"
itertools = "0.14.0"
futures = "0.3.31"
url = "2.5.4"
uuid = "1.17.0"
delegate = "0.13.4"
dashmap = "6.1.0"
prost = "0.14.0"
rand = "0.8.5"
object_store = "0.12.3"
bytes = "1.10.1"
pin-project = "1.1.10"
tokio-stream = "0.1.17"

# integration_tests deps
insta = { version = "1.43.1", features = ["filters"], optional = true }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf", optional = true }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf", optional = true }
parquet = { version = "57.0.0", optional = true }
arrow = { version = "57.0.0", optional = true }
hyper-util = { version = "0.1.16", optional = true }
pretty_assertions = { version = "1.4", optional = true }

[features]
integration = [
    "insta",
    "tpchgen",
    "tpchgen-arrow",
    "parquet",
    "arrow",
    "hyper-util",
    "pretty_assertions",
]

tpch = ["integration"]
tpcds = ["integration"]

[dev-dependencies]
structopt = "0.3"
insta = { version = "1.43.1", features = ["filters"] }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf" }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf" }
parquet = "57.0.0"
arrow = "57.0.0"
tokio-stream = "0.1.17"
hyper-util = "0.1.16"
pretty_assertions = "1.4"
