[package]
edition = "2024"
name = "datafusion-distributed"
version = "0.1.0"

[features]
avro = ["datafusion/avro"]
clickbench = ["integration"]
integration = [
    "insta",
    "tpchgen",
    "tpchgen-arrow",
    "parquet",
    "arrow",
    "hyper-util",
    "pretty_assertions",
    "reqwest",
    "zip",
]
tpcds = ["integration"]
tpch = ["integration"]

[dependencies]
arrow-flight = "57.1.0"
arrow-select = "57.1.0"
async-trait = "0.1.88"
bytes = "1.10.1"
dashmap = "6.1.0"
delegate = "0.13.4"
futures = "0.3.31"
http = "1.3.1"
itertools = "0.14.0"
object_store = "0.12.3"
pin-project = "1.1.10"
prost = "0.14.0"
rand = "0.8.5"
tokio-stream = "0.1.17"
tower = "0.5.2"
url = "2.5.4"
uuid = "1.17.0"

[dependencies.arrow]
version = "57.1.0"
optional = true

[dependencies.chrono]
version = "0.4.42"

[dependencies.datafusion]
workspace = true
features = [
    "parquet",
    "sql",
    "unicode_expressions",
    "datetime_expressions",
]

[dependencies.datafusion-proto]
workspace = true

[dependencies.hyper-util]
version = "0.1.16"
optional = true

[dependencies.insta]
version = "1.43.1"
features = ["filters"]
optional = true

[dependencies.moka]
version = "0.12"
features = ["sync"]

[dependencies.parquet]
version = "57.1.0"
optional = true

[dependencies.pretty_assertions]
version = "1.4"
optional = true

[dependencies.reqwest]
version = "0.12"
optional = true

[dependencies.tokio]
version = "1.46.1"
features = ["full"]

[dependencies.tonic]
version = "0.14.1"
features = ["transport"]

[dependencies.tpchgen]
git = "https://github.com/clflushopt/tpchgen-rs"
rev = "e83365a5a9101906eb9f78c5607b83bc59849acf"
optional = true

[dependencies.tpchgen-arrow]
git = "https://github.com/clflushopt/tpchgen-rs"
rev = "e83365a5a9101906eb9f78c5607b83bc59849acf"
optional = true

[dependencies.zip]
version = "6.0"
optional = true

[dev-dependencies]
arrow = "57.1.0"
hyper-util = "0.1.16"
parquet = "57.1.0"
pretty_assertions = "1.4"
reqwest = "0.12"
structopt = "0.3"
tokio-stream = "0.1.17"
zip = "6.0"

[dev-dependencies.insta]
version = "1.43.1"
features = ["filters"]

[dev-dependencies.tpchgen]
git = "https://github.com/clflushopt/tpchgen-rs"
rev = "e83365a5a9101906eb9f78c5607b83bc59849acf"

[dev-dependencies.tpchgen-arrow]
git = "https://github.com/clflushopt/tpchgen-rs"
rev = "e83365a5a9101906eb9f78c5607b83bc59849acf"

[workspace]
members = [
    "benchmarks",
    "cli",
    "console",
]

[workspace.dependencies.datafusion]
version = "51.0.0"
default-features = false

[workspace.dependencies.datafusion-proto]
version = "51.0.0"
