[package]
name = "datafusion-distributed-benchmarks"
version = "0.1.0"
edition = "2024"
default-run = "dfbench"

[dependencies]
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-distributed = { path = "..", features = ["integration"] }
tokio = { version = "1.48", features = ["full"] }
parquet = { version = "57.1.0" }
structopt = { version = "0.3.26" }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.141"
env_logger = "0.11.8"
async-trait = "0.1.89"
chrono = "0.4.42"
futures = "0.3.31"
dashmap = "6.0.1"
prost = "0.14.1"
url = "2.5.7"
arrow-flight = "57.1.0"
tonic = { version = "0.14.1", features = ["transport"] }
axum = "0.7"
object_store = { version = "0.12.4", features = ["aws"] }
aws-config = "1"
aws-sdk-ec2 = "1"
openssl = { version = "0.10", features = ["vendored"] }
clap = "4.5"

[build-dependencies]
built = { version = "0.8" , features = ["git2"]}

[[bin]]
name = "dfbench"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "cdk/bin/worker.rs"
