[package]
name = "datafusion-distributed-console"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
datafusion-distributed = { path = "..", features = ["integration"] }
arrow-flight = "57.1.0"
structopt = "0.3.26"
