[package]
name = "datafusion-distributed-console"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = { workspace = true }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
datafusion-distributed = { path = "..", features = ["integration"] }
arrow-flight = "57.1.0"
url = "2.5.7"
tokio-stream = "0.1.18"

[dev-dependencies]
arrow = "57.1.0"
async-trait = "0.1.89"
futures = "0.3.31"
structopt = "0.3.26"
url = "2.5.7"
