[package]
name = "ballista-benchmarks"
version = "0.1.0"
edition = "2024"

# Empty workspace table to detach from root workspace
[workspace]

[[bin]]
name = "ballista-http"
path = "src/ballista_http.rs"

[[bin]]
name = "ballista-scheduler"
path = "src/ballista_scheduler.rs"

[[bin]]
name = "ballista-executor"
path = "src/ballista_executor.rs"

[dependencies]
ballista = "51.0.0"
ballista-core = "51.0.0"
ballista-executor = "51.0.0"
ballista-scheduler = "51.0.0"
object_store = { version = "0.12", features = ["aws"] }
tokio = { version = "1", features = ["full"] }
url = "2"
clap = { version = "4", features = ["derive"] }
structopt = "0.3"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
